--- a/exercise_1/exercise_1.tex
+++ b/exercise_1/exercise_1.tex
@@ -52,7 +52,7 @@ package manager. These exercises were tested using version 4.210, so try to
 install at least that version or newer.
 
 GTKWave installed from the package manager as of Ubuntu 20.04 works. The version
-in the package manager is 3.3.103. Your mileage may very depending on your
+in the package manager is 3.3.103. Your mileage may vary depending on your
 package manager.
 
 \noindent\textbf{Step 1: Define the module interface}\\
