--- a/exercise_3/exercise_3.tex
+++ b/exercise_3/exercise_3.tex
@@ -125,6 +125,24 @@ the whole multiplier. The next step could be to terminate when you don't need to
 iterate over the multiplier any more and provide the product as soon as it's
 ready. 
 
+\subsection*{Testing}
+Feel free to add more tests. At the moment, the success output looks like:
+\begin{verbatim}
+-- RUN ---------------------
+obj_dir/Vmultiplier_top +trace
+[1] Tracing to logs/vlt_dump.vcd...
+
+[1] Model running...
+
+[20] req_val: 0 A * B = 0 * 0 rd_resp_val: 0, product: 0
+Run some basic test cases
+Run exhaustive testing
+Testing changing inputs while a request is in progress
+Test backpressuring the input
+\end{verbatim}
+\textbf{Note:} The test will pause for a bit after printing "Run exhaustive
+testing", because it just takes a while to run all the different combinations.
+
 \section*{Part 2: the memory}
 The task here is to take the provided synchronous 1r1w memory primitive and
 build another synchronous 1r1w memory but with some extra features. A 1r1w
@@ -163,5 +181,36 @@ After you've gotten that working, then move onto implementing the bypassing.
 Consider what you need to save in order to bypass the correct data from write to
 read as well as how to tell whether you should use the data you've saved or the
 data from the memory.
+
+\subsection*{Testing}
+Feel free to add more tests in \texttt{sim\_main.cpp} as you see fit. At thet
+moment, the success output looks like
+\begin{verbatim}
+-- RUN ---------------------
+obj_dir/Vmem_wr_bypass_top +trace
+[1] Tracing to logs/vlt_dump.vcd...
+
+[1] Model running...
+
+[20] wr_req_val: 0 mem[0] <- 0 rd_resp_val: 0, rd_resp_data: 3b
+[30] wr_req_val: 1 mem[0] <- ab rd_resp_val: 0, rd_resp_data: 3b
+[55] wr_req_val: 0 mem[0] <- ab rd_resp_val: 1, rd_resp_data: ab
+[70] wr_req_val: 1 mem[1] <- c6 rd_resp_val: 0, rd_resp_data: ab
+[95] wr_req_val: 0 mem[1] <- c6 rd_resp_val: 1, rd_resp_data: c6
+[110] wr_req_val: 1 mem[2] <- 69 rd_resp_val: 0, rd_resp_data: c6
+[135] wr_req_val: 0 mem[2] <- 69 rd_resp_val: 1, rd_resp_data: 69
+[150] wr_req_val: 1 mem[3] <- 73 rd_resp_val: 0, rd_resp_data: 69
+[175] wr_req_val: 0 mem[3] <- 73 rd_resp_val: 1, rd_resp_data: 73
+[190] wr_req_val: 1 mem[4] <- 51 rd_resp_val: 0, rd_resp_data: 73
+[215] wr_req_val: 0 mem[4] <- 51 rd_resp_val: 1, rd_resp_data: 51
+[230] wr_req_val: 1 mem[5] <- ff rd_resp_val: 0, rd_resp_data: 51
+[255] wr_req_val: 0 mem[5] <- ff rd_resp_val: 1, rd_resp_data: ff
+[270] wr_req_val: 1 mem[6] <- 4a rd_resp_val: 0, rd_resp_data: ff
+[295] wr_req_val: 0 mem[6] <- 4a rd_resp_val: 1, rd_resp_data: 4a
+[310] wr_req_val: 1 mem[7] <- ec rd_resp_val: 0, rd_resp_data: 4a
+[335] wr_req_val: 0 mem[7] <- ec rd_resp_val: 1, rd_resp_data: ec
+[385] wr_req_val: 0 mem[0] <- 65 rd_resp_val: 1, rd_resp_data: 65
+[425] wr_req_val: 0 mem[0] <- 65 rd_resp_val: 1, rd_resp_data: 4a
+\end{verbatim}
 
 \end{document}
